# autism_backend_data

./: .env.example  .gitignore  PIPELINE_SUMMARY.md  README.md  pyproject.toml  requirements.txt  run_autism_pipeline.sh
.claude/: settings.local.json
claude_pipeline/: QUICKSTART.md  README.md  __init__.py  checkpoint_manager.py  config.py  example.py  ncbi_fetcher.py  pipeline.py  query_results.py  run.py  treatment_classifier.py  treatment_extractor.py
src/pubmed_pipeline/: __init__.py  cli.py  pipeline.py
src/pubmed_pipeline/internal_datasets/: base.py  dynamodb.py  local_files.py  mongo.py
